--- a/student/index.html
+++ b/student/index.html
@@ -132,8 +132,8 @@
     }
     const qn = val.number;
     currentQuestion = qn;
-   const padded = String(qn).padStart(2, '0');
-  imageEl.src = ./images/C${padded}.png; // Đường dẫn ảnh
+    const padded = String(qn).padStart(2, '0');
+    imageEl.src = `./images/C${padded}.png`; // Đường dẫn ảnh
     startCountdown(30);
     resetButtonSelection();
   });
@@ -142,12 +142,12 @@
   function startCountdown(sec) {
     clearInterval(countdownInt);
     let t = sec;
-    countdownEl.innerText = ⏱️ ${t}s;
+    countdownEl.innerText = `⏱️ ${t}s`;
     answerAllowed = true;
     enableButtons();
     countdownInt = setInterval(() => {
       t--;
-      countdownEl.innerText = ⏱️ ${t}s;
+      countdownEl.innerText = `⏱️ ${t}s`;
       if (t <= 0) {
         clearInterval(countdownInt);
         countdownEl.innerText = "⏱️ 0s";
@@ -186,7 +186,7 @@
 
     // Hiển thị danh sách
     const listItem = document.createElement("li");
-    listItem.textContent = Câu ${currentQuestion}: ${ans};
+    listItem.textContent = `Câu ${currentQuestion}: ${ans}`;
     answeredQuestionsEl.appendChild(listItem);
 
     // Gửi Firebase
@@ -221,6 +221,7 @@
       alert("Vui lòng nhập tên!");
       return;
     }
+    // Lưu tên vào localStorage
     localStorage.setItem("name", nameInput);
     studentDisplay.innerText = "👨‍🎓 Tên nhóm: " + nameInput;
     document.getElementById("loginArea").style.display = "none";
