--- a/student/index.html
+++ b/student/index.html
@@ -98,7 +98,7 @@
   <div id="studentDisplay"></div>
   <div id="countdown-container">
     <span id="currentQ">Câu: —</span>
-    ⏱️ <span id="countdown">Còn lại: —</span>
+    <span id="countdown">Còn lại: —</span>
   </div>
 
   <img id="questionImage" src="" alt="Câu hỏi sẽ xuất hiện tại đây">
